# codex-transcripts

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
src/codex_transcripts/: __init__.py
src/codex_transcripts/templates/: index.html  macros.html  search.js
tests/: test_codex_transcripts.py
tests/fixtures/: index_parity_session.jsonl  real_session_excerpt.jsonl
