[project]
name = "codex-export"
version = "0.1.2"
description = "Export Codex Desktop session files as shareable HTML pages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "markdown>=3.8",
    "questionary>=2.1.1",
]

[project.scripts]
codex-export = "codex_export:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "codex_export"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
